fixing zoom issues on safari

--- a/client/components/CardsTable/style.css
+++ b/client/components/CardsTable/style.css
@@ -51,11 +51,16 @@
   text-align: center;
   cursor: pointer;
   background-color: #f2f2f2;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
+  transform-style: preserve-3d;
 }
 .hand:hover{
   font-weight: bold;
   background-color: #f2f2f2;
   transform: scale(2.5);
+  position: absolute;
+  z-index: 1;
 }
 
 .legend{
